[package]

name = "rustcql"
version = "0.0.5"
authors = ["Maxim Baranov <sprayrules@gmail.com>"]

description = "Rust Cassandra Client (CQL Binary Protocol v4)"
repository = "https://github.com/madmaxio/rustcql"
keywords = ["cassandra", "cql", "database", "driver"]
license = "MIT"


[dependencies]

bufstream = "*"
byteorder = "*"
serde = "*"
serde_json = "*"
serde_macros = "*"
uuid = "*"