[package]

name = "rustcql"
version = "0.0.6"
authors = ["Maxim Baranov <sprayrules@gmail.com>"]

description = "Rust Cassandra Client (CQL Binary Protocol v4)"
repository = "https://github.com/madmaxio/rustcql"
keywords = ["cassandra", "cql", "database", "driver"]
license = "MIT"


[dependencies]

bufstream = "0.1.2"
byteorder = "0.5.3"
serde = "0.8.4"
serde_json = "0.8.1"
serde_macros = "0.8.4"
uuid = "0.3.1"